--- a/griffiths_em/custom.sty
+++ b/griffiths_em/custom.sty
@@ -1,13 +1,23 @@
 \ProvidesPackage{custom}
 
-%package list
-\usepackage[dvipsnames]{xcolor}
+% package list
+\usepackage[a4paper,left=1in, right=1in, top=1in]{geometry} % set document dimensions
+\usepackage[dvipsnames]{xcolor} % more colors
 \usepackage{physics}
-%\usepackage{xparse} 
-%\usepackage{amsmath} loaded by physics by default
-\usepackage{esint} %for path integral symbol
-\usepackage{import}
-\usepackage{hyperref}
+% \usepackage{xparse}  this and
+% \usepackage{amsmath} this is loaded by physics by default
+\usepackage{siunitx} % for SI units
+\AtBeginDocument{\RenewCommandCopy\qty\SI} % to use siunitx with physics package
+% get rid of warning from siunitx and physics package
+\ExplSyntaxOn 
+\msg_redirect_name:nnn { siunitx } { physics-pkg } { none }
+\ExplSyntaxOff 
+
+\usepackage{esint} % for path integral symbol
+
+% input packages
+\usepackage{import} 
+\usepackage{hyperref} % for hyperlinks
 \hypersetup{
   colorlinks   = true,    % Colours links instead of ugly boxes
   urlcolor     = Cerulean,    % Colour for external hyperlinks
@@ -15,16 +25,61 @@
   citecolor    = red      % Colour of citations
 }
 \usepackage{graphicx}
-\graphicspath{{images/}} %set image path for graphicx
-
-\usepackage[a4paper,left=1in, right=1in, top=1in]{geometry}
-\usepackage{subfiles}
+\graphicspath{{images/}} % set image path for graphicx
 \usepackage{caption}
+\usepackage{subcaption}
 
-%custom formatting
+\usepackage{subfiles} 
+
+% custom formatting
 \numberwithin{figure}{section}
 \numberwithin{equation}{section}
+\setlength{\parindent}{0pt}
 
-%custom commmands
-\newcommand{\vect}[1]{\mathbf{#1}} %instead use \vb{#1} from physics package
-\newcommand{\barh}{\vspace{5px} \hrule \vspace{5px}}
+% custom commmands
+\newcommand{\vect}[1]{\mathbf{#1}} % instead use \vb{#1} from physics package
+\newcommand{\barh}{\vspace{5px} \hrule \vspace{5px}} % horizontal bar
+
+% custom environments for code highlighting
+\usepackage{listings}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+
+\lstset{style=mystyle} 
+
+% hyperbolic math operators
+\DeclareMathOperator{\arccosh}{arccosh}
+\DeclareMathOperator{\arcsinh}{arcsinh}
+\DeclareMathOperator{\arctanh}{arctanh}
+
+% more math packages
+\usepackage{cancel}
+
+% seperation vector script r
+\usepackage{calligra}
+
+\DeclareMathAlphabet{\mathcalligra}{T1}{calligra}{m}{n}
+\DeclareFontShape{T1}{calligra}{m}{n}{<->s*[2.2]callig15}{}
+\newcommand{\scriptr}{\mathcalligra{r}\,}
+\newcommand{\boldscriptr}{\pmb{\mathcalligra{r}}\,}
