dracular plus griffiths 1.14

--- a/griffiths_em/custom.sty
+++ b/griffiths_em/custom.sty
@@ -16,13 +16,15 @@
 \usepackage{esint} % for path integral symbol
 
 % input packages
+\usepackage{draculatheme} % dracula theme, the best theme
+% \usepackage[enable]{darkmode}
 \usepackage{import} 
 \usepackage{hyperref} % for hyperlinks
 \hypersetup{
   colorlinks   = true,    % Colours links instead of ugly boxes
-  urlcolor     = Cerulean,    % Colour for external hyperlinks
-  linkcolor    = Cerulean,    % Colour of internal links
-  citecolor    = red      % Colour of citations
+  urlcolor     = draculagreen,    % Colour for external hyperlinks without dracula theme: Cerulean
+  linkcolor    = draculagreen,    % Colour of internal links "Cerulean"
+  citecolor    = draculared      % Colour of citations "Red"
 }
 \usepackage{graphicx}
 \graphicspath{{images/}} % set image path for graphicx
