--- a/griffiths_em/custom.sty
+++ b/griffiths_em/custom.sty
@@ -41,6 +41,7 @@
 % custom commmands
 \newcommand{\vect}[1]{\mathbf{#1}} % instead use \vb{#1} from physics package
 \newcommand{\barh}{\vspace{5px} \hrule \vspace{5px}} % horizontal bar
+\newcommand{\qt}{\quantity} % quantity shortcut
 
 % custom environments for code highlighting
 \usepackage{listings}
