--- a/griffiths_em/custom.sty
+++ b/griffiths_em/custom.sty
@@ -86,3 +86,6 @@
 \DeclareFontShape{T1}{calligra}{m}{n}{<->s*[2.2]callig15}{}
 \newcommand{\scriptr}{\mathcalligra{r}\,}
 \newcommand{\boldscriptr}{\pmb{\mathcalligra{r}}\,}
+
+% physics constants
+\newcommand{\ke}{\frac{1}{4\pi\epsilon_0}}
