--- a/griffiths_em/main.tex
+++ b/griffiths_em/main.tex
@@ -11,11 +11,14 @@
 \tableofcontents
 \pagebreak
 
-%CHAPTER 1
+% CHAPTER 1
 \subfile{chapters/chapter1}
 
-%CHAPTER 2
+% CHAPTER 2
 \newpage
 \subfile{chapters/chapter2}
 
+% CHAPTER 3
+\newpage
+\subfile{chapters/chapter3}
 \end{document}
